@@ -9,26 +9,29 @@ import si.unm.fis.pqcdemobankingapp.dto.TransferRequest;
 import si.unm.fis.pqcdemobankingapp.dto.TransferResponse;
 import si.unm.fis.pqcdemobankingapp.service.PqcSignatureService;
 
+import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
+import javax.net.ssl.SSLSocketFactory;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
+import java.io.InputStream;
+import java.io.OutputStream;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.net.URI;
-import java.net.http.HttpClient;
-import java.net.http.HttpRequest;
-import java.net.http.HttpResponse;
+import java.net.URL;
+import java.nio.charset.StandardCharsets;
 import java.security.KeyFactory;
 import java.security.PublicKey;
 import java.security.SecureRandom;
 import java.security.Security;
 import java.security.cert.X509Certificate;
 import java.security.spec.X509EncodedKeySpec;
-import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Base64;
 import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Map;
 import java.util.concurrent.ConcurrentLinkedQueue;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
@@ -43,8 +46,15 @@ import java.util.concurrent.atomic.AtomicInteger;
  *  - keep-alive (realan produkcioni scenario) naspram fresh-connection-per-request
  *    (izoluje čist trošak TLS handshake-a)
  *
+ * VAŽNO: namerno koristi HttpsURLConnection (setSSLSocketFactory), a ne
+ * java.net.http.HttpClient. HttpClient interno gradi sopstveni SSLParameters
+ * i primenjuje ga preko standardnog javax.net.ssl API-ja, čime prepiše/obriše
+ * BC-specifične namedGroups/signatureSchemes postavljene preko system
+ * property-ja — rezultat je "no selectable cipher suite" jer se mldsa65
+ * potpisna šema izgubi iz ponude. HttpsURLConnection to ne radi.
+ *
  * Zahteva da oba servera budu upaljena pre pokretanja:
- *   Terminal 1 (PQC):     mvn spring-boot:run
+ *   Terminal 1 (PQC):      mvn spring-boot:run
  *   Terminal 2 (klasičan): java -Dpqc.tls.enabled=false -Dspring.profiles.active=classic -jar target/*.jar
  *
  * Pokreni ovu klasu iz istog Maven modula (isti classpath sa BC i Jackson
@@ -59,9 +69,11 @@ public class PqcBankingBenchmarkClient {
     private static final String TRANSFER_UNSIGNED_PATH = "/api/v1/banking/transfer-unsigned";
     private static final String PUBLIC_KEY_PATH = "/api/v1/banking/public-key";
 
-    private static final int WARMUP_REQUESTS = 10;
-    private static final int TOTAL_REQUESTS = 200;
+    private static final int WARMUP_REQUESTS = 75;
+    private static final int TOTAL_REQUESTS = 3000;
     private static final int CONCURRENCY_LEVEL = 8;
+    private static final int TIMEOUT_MS = 10_000;
+    private static final int REPEAT_RUNS = 3; // ponovi ceo benchmark N puta radi varijanse
 
     private static final ObjectMapper MAPPER = buildObjectMapper();
 
@@ -77,24 +89,71 @@ public class PqcBankingBenchmarkClient {
         System.setProperty("org.bouncycastle.jsse.server.namedGroups", groups);
         System.setProperty("org.bouncycastle.jsse.client.acceptUnknownCLI", "true");
 
-        if (Security.getProvider("BC") == null) {
-            Security.addProvider(new BouncyCastleProvider());
-        }
         if (Security.getProvider("BCJSSE") == null) {
-            Security.addProvider(new BouncyCastleJsseProvider());
+            Security.insertProviderAt(new BouncyCastleJsseProvider(), 1);
+        }
+        if (Security.getProvider("BC") == null) {
+            Security.insertProviderAt(new BouncyCastleProvider(), 2);
         }
     }
 
     public static void main(String[] args) throws Exception {
         System.out.println("==================================================================");
         System.out.println("  PQC vs KLASICAN TLS BANKING BENCHMARK (ML-DSA-65 / ML-KEM-768)  ");
+        System.out.println("  " + TOTAL_REQUESTS + " zahteva po scenariju, " + REPEAT_RUNS + " ponavljanja  ");
         System.out.println("==================================================================\n");
 
-        List<BenchmarkResult> results = new ArrayList<>();
-        results.add(runSuiteFor("PQC-TLS", PQC_HOST, true));
-        results.add(runSuiteFor("Klasican TLS", CLASSIC_HOST, false));
+        Map<String, List<Scenario>> aggregate = new LinkedHashMap<>();
 
-        printComparisonSummary(results);
+        for (int run = 1; run <= REPEAT_RUNS; run++) {
+            System.out.println("\n########## PROLAZ " + run + "/" + REPEAT_RUNS + " ##########");
+
+            List<BenchmarkResult> results = new ArrayList<>();
+            results.add(runSuiteFor("PQC-TLS", PQC_HOST, true));
+            results.add(runSuiteFor("Klasican TLS", CLASSIC_HOST, false));
+
+            printComparisonSummary(results);
+
+            for (BenchmarkResult r : results) {
+                addToAggregate(aggregate, r.label + " | potpisano,   keep-alive", r.signedKeepAlive);
+                addToAggregate(aggregate, r.label + " | nepotpisano, keep-alive", r.unsignedKeepAlive);
+                addToAggregate(aggregate, r.label + " | potpisano,   fresh-conn", r.signedFreshConn);
+                addToAggregate(aggregate, r.label + " | nepotpisano, fresh-conn", r.unsignedFreshConn);
+            }
+        }
+
+        printAggregateAcrossRuns(aggregate);
+    }
+
+    private static void addToAggregate(Map<String, List<Scenario>> aggregate, String key, Scenario scenario) {
+        aggregate.computeIfAbsent(key, k -> new ArrayList<>()).add(scenario);
+    }
+
+    private static double mean(List<Double> values) {
+        return values.stream().mapToDouble(Double::doubleValue).average().orElse(0);
+    }
+
+    private static double stddev(List<Double> values) {
+        if (values.size() < 2) return 0;
+        double m = mean(values);
+        double sumSq = values.stream().mapToDouble(v -> (v - m) * (v - m)).sum();
+        return Math.sqrt(sumSq / (values.size() - 1));
+    }
+
+    private static void printAggregateAcrossRuns(Map<String, List<Scenario>> aggregate) {
+        System.out.println("\n==================================================================");
+        System.out.println("      AGREGAT PREKO " + REPEAT_RUNS + " PROLAZA (srednja vrednost ± stddev)      ");
+        System.out.println("==================================================================");
+        for (Map.Entry<String, List<Scenario>> entry : aggregate.entrySet()) {
+            List<Double> tpsValues = new ArrayList<>();
+            List<Double> avgValues = new ArrayList<>();
+            for (Scenario s : entry.getValue()) {
+                tpsValues.add(s.throughput());
+                avgValues.add(s.avgMs);
+            }
+            System.out.printf("%-42s tps=%7.1f ± %5.1f   avg=%6.2fms ± %5.2f%n",
+                    entry.getKey(), mean(tpsValues), stddev(tpsValues), mean(avgValues), stddev(avgValues));
+        }
     }
 
     // ---------- Orkestracija jedne mete (jednog servera) ----------
@@ -104,39 +163,36 @@ public class PqcBankingBenchmarkClient {
         System.out.println("META: " + label + "  (" + host + ")");
         System.out.println("------------------------------------------------------------------");
 
-        SSLContext sslContext = pqc ? createPqcSslContext() : createClassicSslContext();
+        SSLSocketFactory factory = pqc ? createPqcSocketFactory() : createClassicSocketFactory();
 
         PublicKey serverSigningKey = null;
         try {
-            serverSigningKey = fetchPublicKey(host, sslContext);
+            serverSigningKey = fetchPublicKey(host, factory);
             System.out.println("Javni ML-DSA-65 kljuc servera preuzet (" + serverSigningKey.getAlgorithm() + ").");
         } catch (Exception e) {
             System.out.println("UPOZORENJE: nisam mogao da preuzmem javni kljuc sa " + host
-                    + PUBLIC_KEY_PATH + " (" + e.getMessage() + ") - potpisi se nece verifikovati.");
+                    + PUBLIC_KEY_PATH + " (" + e + ") - potpisi se nece verifikovati.");
         }
 
         BenchmarkResult result = new BenchmarkResult(label);
-        result.signedKeepAlive = runScenario(host + TRANSFER_PATH, sslContext, true, false, serverSigningKey, "potpisano   / keep-alive  ");
-        result.unsignedKeepAlive = runScenario(host + TRANSFER_UNSIGNED_PATH, sslContext, false, false, null, "nepotpisano / keep-alive  ");
-        result.signedFreshConn = runScenario(host + TRANSFER_PATH, sslContext, true, true, serverSigningKey, "potpisano   / fresh-conn  ");
-        result.unsignedFreshConn = runScenario(host + TRANSFER_UNSIGNED_PATH, sslContext, false, true, null, "nepotpisano / fresh-conn  ");
+        result.signedKeepAlive = runScenario(host + TRANSFER_PATH, factory, true, false, serverSigningKey, "potpisano   / keep-alive  ");
+        result.unsignedKeepAlive = runScenario(host + TRANSFER_UNSIGNED_PATH, factory, false, false, null, "nepotpisano / keep-alive  ");
+        result.signedFreshConn = runScenario(host + TRANSFER_PATH, factory, true, true, serverSigningKey, "potpisano   / fresh-conn  ");
+        result.unsignedFreshConn = runScenario(host + TRANSFER_UNSIGNED_PATH, factory, false, true, null, "nepotpisano / fresh-conn  ");
 
         System.out.println();
         return result;
     }
 
-    private static Scenario runScenario(String url, SSLContext sslContext, boolean expectSignature,
-                                         boolean freshConnectionPerRequest, PublicKey verifyKey,
-                                         String label) throws Exception {
+    private static Scenario runScenario(String url, SSLSocketFactory factory, boolean expectSignature,
+                                        boolean freshConnectionPerRequest, PublicKey verifyKey,
+                                        String label) throws Exception {
 
         System.out.print("  -> " + label + " ... ");
 
-        HttpClient sharedClient = freshConnectionPerRequest ? null : buildClient(sslContext);
-
         for (int i = 0; i < WARMUP_REQUESTS; i++) {
-            HttpClient client = freshConnectionPerRequest ? buildClient(sslContext) : sharedClient;
             try {
-                sendOnce(client, url);
+                sendOnce(factory, url, freshConnectionPerRequest);
             } catch (Exception ignored) {
                 // warmup - ignorisemo greske
             }
@@ -153,18 +209,17 @@ public class PqcBankingBenchmarkClient {
         List<Future<?>> futures = new ArrayList<>();
         for (int i = 0; i < TOTAL_REQUESTS; i++) {
             futures.add(executor.submit(() -> {
-                HttpClient client = freshConnectionPerRequest ? buildClient(sslContext) : sharedClient;
                 long reqStart = System.nanoTime();
                 try {
-                    HttpResponse<String> response = sendOnce(client, url);
+                    RequestResult rr = sendOnce(factory, url, freshConnectionPerRequest);
                     long latencyMs = (System.nanoTime() - reqStart) / 1_000_000;
 
-                    if (response.statusCode() == 200) {
+                    if (rr.statusCode == 200) {
                         success.incrementAndGet();
                         latencies.add(latencyMs);
 
                         if (expectSignature && verifyKey != null) {
-                            TransferResponse parsed = MAPPER.readValue(response.body(), TransferResponse.class);
+                            TransferResponse parsed = MAPPER.readValue(rr.body, TransferResponse.class);
                             if (PqcSignatureService.verify(parsed, verifyKey)) {
                                 verified.incrementAndGet();
                             }
@@ -188,69 +243,94 @@ public class PqcBankingBenchmarkClient {
         return Scenario.from(latencies, success.get(), failure.get(), verified.get(), expectSignature, totalSeconds);
     }
 
-    // ---------- HTTP pozivi ----------
+    // ---------- HTTP pozivi (HttpsURLConnection) ----------
 
-    private static HttpResponse<String> sendOnce(HttpClient client, String url) throws Exception {
-        TransferRequest body = new TransferRequest(
+    private static class RequestResult {
+        final int statusCode;
+        final String body;
+        RequestResult(int statusCode, String body) {
+            this.statusCode = statusCode;
+            this.body = body;
+        }
+    }
+
+    private static RequestResult sendOnce(SSLSocketFactory factory, String url, boolean freshConnection) throws Exception {
+        HttpsURLConnection conn = (HttpsURLConnection) new URL(url).openConnection();
+        conn.setSSLSocketFactory(factory);
+        conn.setHostnameVerifier((hostname, session) -> true);
+        conn.setConnectTimeout(TIMEOUT_MS);
+        conn.setReadTimeout(TIMEOUT_MS);
+        conn.setRequestMethod("POST");
+        conn.setRequestProperty("Content-Type", "application/json");
+        if (freshConnection) {
+            // Forsira zatvaranje konekcije posle odgovora -> sledeci zahtev
+            // mora da otvori novu TLS konekciju (meri cist handshake trosak).
+            conn.setRequestProperty("Connection", "close");
+        }
+        conn.setDoOutput(true);
+
+        TransferRequest body = randomTransferRequest();
+        String json = MAPPER.writeValueAsString(body);
+        try (OutputStream os = conn.getOutputStream()) {
+            os.write(json.getBytes(StandardCharsets.UTF_8));
+        }
+
+        int status = conn.getResponseCode();
+        InputStream is = (status == 200) ? conn.getInputStream() : conn.getErrorStream();
+        String responseBody = is != null ? new String(is.readAllBytes(), StandardCharsets.UTF_8) : "";
+
+        if (freshConnection) {
+            conn.disconnect();
+        }
+        // U keep-alive rezimu NE zovemo disconnect() - JDK sam vraca konekciju
+        // u interni keep-alive pool posto je stream do kraja procitan.
+
+        return new RequestResult(status, responseBody);
+    }
+
+    private static TransferRequest randomTransferRequest() {
+        return new TransferRequest(
                 "RS35" + ThreadLocalRandom.current().nextLong(100000000L, 999999999L),
                 "RS35" + ThreadLocalRandom.current().nextLong(100000000L, 999999999L),
                 BigDecimal.valueOf(ThreadLocalRandom.current().nextDouble(1, 5000)).setScale(2, RoundingMode.HALF_UP),
                 "EUR"
         );
-        String json = MAPPER.writeValueAsString(body);
-
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(url))
-                .header("Content-Type", "application/json")
-                .timeout(Duration.ofSeconds(10))
-                .POST(HttpRequest.BodyPublishers.ofString(json))
-                .build();
-
-        return client.send(request, HttpResponse.BodyHandlers.ofString());
     }
 
-    private static PublicKey fetchPublicKey(String host, SSLContext sslContext) throws Exception {
-        HttpClient client = buildClient(sslContext);
-        HttpRequest request = HttpRequest.newBuilder()
-                .uri(URI.create(host + PUBLIC_KEY_PATH))
-                .timeout(Duration.ofSeconds(10))
-                .GET()
-                .build();
+    private static PublicKey fetchPublicKey(String host, SSLSocketFactory factory) throws Exception {
+        HttpsURLConnection conn = (HttpsURLConnection) new URL(host + PUBLIC_KEY_PATH).openConnection();
+        conn.setSSLSocketFactory(factory);
+        conn.setHostnameVerifier((hostname, session) -> true);
+        conn.setConnectTimeout(TIMEOUT_MS);
+        conn.setReadTimeout(TIMEOUT_MS);
+        conn.setRequestMethod("GET");
 
-        HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
-        if (response.statusCode() != 200) {
-            throw new IllegalStateException("HTTP " + response.statusCode());
+        int status = conn.getResponseCode();
+        if (status != 200) {
+            throw new IllegalStateException("HTTP " + status);
         }
 
-        PublicKeyResponse pk = MAPPER.readValue(response.body(), PublicKeyResponse.class);
+        String responseBody = new String(conn.getInputStream().readAllBytes(), StandardCharsets.UTF_8);
+        PublicKeyResponse pk = MAPPER.readValue(responseBody, PublicKeyResponse.class);
         byte[] keyBytes = Base64.getDecoder().decode(pk.getPublicKeyBase64());
         KeyFactory kf = KeyFactory.getInstance(PqcSignatureService.ALGORITHM, PqcSignatureService.PROVIDER_NAME);
         return kf.generatePublic(new X509EncodedKeySpec(keyBytes));
     }
 
-    // ---------- SSL / HTTP klijent podešavanje ----------
+    // ---------- SSL podešavanje ----------
 
-    private static HttpClient buildClient(SSLContext sslContext) {
-        return HttpClient.newBuilder()
-                .sslContext(sslContext)
-                .connectTimeout(Duration.ofSeconds(10))
-                .version(HttpClient.Version.HTTP_1_1)
-                .build();
-    }
-
-    private static SSLContext createPqcSslContext() throws Exception {
+    private static SSLSocketFactory createPqcSocketFactory() throws Exception {
         SSLContext ctx = SSLContext.getInstance("TLSv1.3", "BCJSSE");
         ctx.init(null, trustAllCerts(), new SecureRandom());
-        return ctx;
+        return ctx.getSocketFactory();
     }
 
-    private static SSLContext createClassicSslContext() throws Exception {
-        // Eksplicitno "SunJSSE" (a ne bez-provider lookup) da bismo bili sigurni
-        // da klasican scenario zaista prolazi kroz standardni JDK TLS stack,
-        // a ne kroz BCJSSE koji je i dalje registrovan u ovom JVM procesu.
+    private static SSLSocketFactory createClassicSocketFactory() throws Exception {
+        // Eksplicitno "SunJSSE" da klasican scenario zaista prolazi kroz
+        // standardni JDK TLS stack, a ne kroz BCJSSE (i dalje registrovan u JVM-u).
         SSLContext ctx = SSLContext.getInstance("TLSv1.3", "SunJSSE");
         ctx.init(null, trustAllCerts(), new SecureRandom());
-        return ctx;
+        return ctx.getSocketFactory();
     }
 
     private static TrustManager[] trustAllCerts() {
@@ -287,7 +367,7 @@ public class PqcBankingBenchmarkClient {
         long p50, p95, p99;
 
         static Scenario from(ConcurrentLinkedQueue<Long> latenciesQ, int success, int failure,
-                              int verified, boolean expectSignature, double totalSeconds) {
+                             int verified, boolean expectSignature, double totalSeconds) {
             Scenario s = new Scenario();
             s.success = success;
             s.failure = failure;
